--- a/package.json
+++ b/package.json
@@ -1,36 +1,44 @@
 {
-  "name": "electron-vue-vite",
-  "version": "0.0.1",
-  "main": "dist/main/index.cjs",
-  "author": "草鞋没号 <308487730@qq.com>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "node scripts/watch.mjs",
-    "build": "node scripts/build.mjs && electron-builder"
-  },
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "dependencies": {
-    "vue": "^3.2.22"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^1.9.4",
-    "chalk": "^4.1.2",
-    "electron": "16.0.0",
-    "electron-builder": "^22.13.1",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.14"
-  },
-  "env": {
-    "//": "Used in build scripts",
-    "HOST": "127.0.0.1",
-    "PORT": 3344
-  },
-  "keywords": [
-    "vite",
-    "electron",
-    "vue3",
-    "rollup"
-  ]
+    "name": "electron-vue-vite",
+    "version": "0.0.1",
+    "main": "dist/main/index.cjs",
+    "author": "hedongshu <hedongshu@foxmail.com>",
+    "description": "description",
+    "license": "MIT",
+    "scripts": {
+        "dev": "node scripts/watch.mjs",
+        "build": "node scripts/build.mjs && electron-builder  --dir",
+        "postinstall": "electron-builder install-app-deps",
+        "rebuild": "electron-rebuild -f -w serialport"
+    },
+    "engines": {
+        "node": ">=16.0.0"
+    },
+    "dependencies": {
+        "serialport": "10.0.0",
+        "vue": "^3.2.22"
+    },
+    "devDependencies": {
+        "electron-packager": "^15.4.0",
+        "@types/serialport": "^8.0.2",
+        "@vitejs/plugin-vue": "^1.9.4",
+        "chalk": "^4.1.2",
+        "electron": "16.0.0",
+        "electron-builder": "^22.13.1",
+        "electron-rebuild": "^3.2.5",
+        "naive-ui": "^2.23.1",
+        "typescript": "^4.4.4",
+        "vite": "^2.6.14"
+    },
+    "env": {
+        "//": "Used in build scripts",
+        "HOST": "127.0.0.1",
+        "PORT": 3344
+    },
+    "keywords": [
+        "vite",
+        "electron",
+        "vue3",
+        "rollup"
+    ]
 }
